@@ -79,6 +79,7 @@ import art.servlets.Config;
 import art.user.User;
 import art.utils.ArtUtils;
 import art.utils.GroovySandbox;
+import art.utils.MongoHelper;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import net.sf.cewolfart.ChartValidationException;
 import net.sf.cewolfart.DatasetProduceException;
@@ -1072,21 +1073,33 @@ public class ReportOutputGenerator {
 				//https://mongodb.github.io/mongo-java-driver/3.4/driver/getting-started/quick-start/
 				//https://github.com/ihr/jongo-by-example/blob/master/src/test/java/org/ingini/mongodb/jongo/example/aggregation/TestAggregationFramework.java
 				//https://stackoverflow.com/questions/24370456/groovy-script-sandboxing-use-groovy-timecategory-syntax-from-java-as-string/24374237
+				//http://groovy-lang.org/integrating.html
+				//http://blog.xebia.com/jongo/
+				//http://ingini.org/2013/04/03/mongodb-with-jongo-sleeves-up/
+				//https://stackoverflow.com/questions/37155718/mapping-a-java-object-with-a-mongodb-document-using-jongo
+				//https://github.com/bguerout/jongo/issues/254
+				//http://www.developer.com/java/ent/using-mongodb-in-a-java-ee7-framework.html
+				//https://stackoverflow.com/questions/7567378/access-a-java-class-from-within-groovy
+				//https://stackoverflow.com/questions/4912400/what-packages-does-1-java-and-2-groovy-automatically-import
 				CompilerConfiguration cc = new CompilerConfiguration();
 				cc.addCompilationCustomizers(new SandboxTransformer());
 				Binding binding = new Binding();
-				String url = null;
+				String url = null; //url with credentials in it
+				String basicUrl = null; //url without credentils in it
 				String username = null;
 				String password = null;
 				Datasource datasource = report.getDatasource();
 				if (datasource != null) {
-					url = datasource.getUrl();
+					basicUrl = datasource.getUrl();
 					username = datasource.getUsername();
 					password = datasource.getPassword();
+					MongoHelper mongoHelper = new MongoHelper();
+					url = mongoHelper.getUrlWithCredentials(basicUrl, username, password);
 				}
 				binding.setProperty("url", url);
 				binding.setProperty("username", username);
 				binding.setProperty("password", password);
+				binding.setProperty("basicUrl", basicUrl);
 				GroovyShell shell = new GroovyShell(binding, cc);
 				GroovySandbox sandbox = new GroovySandbox();
 				sandbox.register();
@@ -1109,6 +1122,7 @@ public class ReportOutputGenerator {
 							//https://www.leveluplunch.com/java/examples/convert-object-bean-properties-map-key-value/
 							//https://stackoverflow.com/questions/26071530/jackson-convert-object-to-map-preserving-date-type
 							//http://cassiomolin.com/converting-pojo-map-vice-versa-jackson/
+							//http://www.makeinjava.com/convert-list-objects-tofrom-json-java-jackson-objectmapper-example/
 							ObjectMapper mapper = new ObjectMapper();
 							@SuppressWarnings("unchecked")
 							Map<String, Object> map = mapper.convertValue(sample, Map.class);
