@@ -34,6 +34,7 @@ ART 3.0
 * Allow for specifying specific colours to be used for given chart series
 * Allow for localization of parameter labels and help text
 * Enable use of barcode4j barcodes in jasperreports
+* Allow to report from MongoDB databases
 * Fix for context is readonly error on application startup
 * Requires Internet Explorer 8+, or recent versions of other browsers
 * Requires Java 7
